--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-bignumber": "^2.0.2",
+    "chai-bn": "^0.1.1",
     "coveralls": "^3.0.1",
     "dotenv": "^4.0.0",
     "eslint": "^4.19.1",
@@ -25,10 +26,11 @@
     "eslint-plugin-standard": "^3.1.0",
     "ethjs-abi": "^0.2.1",
     "ganache-cli": "6.1.0",
-    "openzeppelin-solidity": "^1.12.0",
+    "openzeppelin-solidity": "^2.3.0",
+    "openzeppelin-test-helpers": "^0.4.3",
     "solidity-coverage": "^0.5.4",
     "solium": "^1.1.8",
-    "truffle": "^4.1.13",
+    "truffle": "^5.0.36",
     "truffle-hdwallet-provider": "0.0.5",
     "web3-utils": "^1.0.0-beta.34"
   }
